# sprinting-boxes

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  bootstrap.sh  detector.config.yaml
.cargo/: config.toml
projects/sb-dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
projects/sb-dashboard/src/: App.tsx  index.css
projects/sb-dashboard/src/components/BoundaryEditor/: BoundaryCanvas.tsx  BoundaryControls.tsx  BoundaryEditor.css  BoundaryEditor.tsx  PointsList.tsx
projects/sb-dashboard/src/components/GlobalEvaluation/: GlobalEvaluation.css  GlobalEvaluation.tsx
projects/sb-dashboard/src/components/RunDetails/: AuditView.tsx  CliffContextPanel.tsx  CliffDetail.tsx  DependenciesCard.tsx  FrameViewer.tsx  ProcessingCard.tsx  PropertiesCard.tsx  RunHeader.tsx
projects/sb-dashboard/src/hooks/: useRunDetails.ts  useVideoProcessing.ts
projects/sb-dashboard/src/pages/: CreateRunPage.tsx  GlobalEvaluationPage.tsx  ListPage.tsx  RunDetailsPage.tsx
projects/sb-dashboard/src/types/: run.ts
projects/sb-dashboard/src/utils/: auditUtils.ts  boundaryUtils.ts
projects/sprinting-boxes/: Cargo.toml  README.md  build.rs
projects/sprinting-boxes/docs/: pipeline-output.md
projects/sprinting-boxes/src/: cli.rs  config.rs  geometry.rs  gpu_detector.rs  main.rs  metal_detect.metal  run_artifacts.rs  run_context.rs  scoring.rs
projects/sprinting-boxes/src/detection/: CoreMLHelper.h  CoreMLHelper.m  coreml.rs  ffi.rs  mod.rs  onnx.rs  slicing.rs  tile_extractor.rs
projects/sprinting-boxes/src/pipeline/: crop.rs  detection.rs  detection_worker.rs  feature.rs  finalize.rs  geometry.rs  image_worker.rs  mod.rs  orchestrator.rs  reader.rs  slicing.rs  types.rs
projects/sprinting-boxes/src/video/: calibration.rs  ffmpeg_reader.rs  image_processor.rs  image_reader.rs  mod.rs  opencv_reader.rs  processor.rs
projects/sprinting-boxes/src/web/: api.rs  assets.rs  audit.rs  mod.rs  server.rs
projects/sprinting-boxes/src/web/audit/: handlers.rs  mod.rs  models.rs  utils.rs
projects/sprinting-boxes/src/web/evaluation/: handlers.rs  mod.rs  models.rs
projects/ultimate-event-detection/: Cargo.toml  README.md  build.rs
projects/ultimate-event-detection/src/: cliff.rs  gpu.rs  lib.rs  pull_side.rs  scoring.rs
projects/ultimate-event-detection/src/metal/: metal_bridge.m  metal_detect.metal
projects/vr180-export/: convert.sh  crop.sh  gen_lut.py  inject_180_metadata.py  inject_metadata.py  preview_crops.sh  pyproject.toml  remap.sh  zero-copy-process.sh
projects/vr180-metal/: Cargo.toml  build.rs
projects/vr180-metal/shaders/: reproject.metal
projects/vr180-metal/src/: decode.rs  encode.rs  gpu.rs  main.rs  mux.rs  pipeline.rs
projects/zero-copy-utils/: Cargo.toml  build.rs
projects/zero-copy-utils/shaders/: process.metal
projects/zero-copy-utils/src/: decode.rs  encode.rs  gpu.rs  main.rs  mux.rs  pipeline.rs
