[package]
name = "sprinting-boxes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
anyhow = "1.0.82"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rust-embed = { version = "8.3.0", features = ["interpolate-folder-path"] }
mime_guess = "2.0.4"
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
walkdir = "2.5.0"
