[package]
name = "sprinting-boxes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
anyhow = "1.0.82"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rust-embed = { version = "8.3.0", features = ["interpolate-folder-path"] }
mime_guess = "2.0.4"
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
walkdir = "2.5.0"
indicatif = "0.17.8"
opencv = "0.94.1"
crossbeam = "0.8.4"
lazy_static = "1.5.0"
async-stream = "0.3.6"
tokio-stream = "0.1.18"
futures = "0.3.31"
geo = { version = "0.28", features = ["use-serde"] }
geo-types = "0.7"
geo-buffer = "0.1"
usls = { version = "0.1.11", default-features = false, features = ["rtdetr", "ort-download-binaries", "github", "image-default-formats", "hf-hub"] }
image = "0.25.9"

[target.'cfg(target_os = "macos")'.dependencies]
usls = { version = "0.1.11", default-features = false, features = ["rtdetr", "ort-download-binaries", "github", "image-default-formats", "coreml", "hf-hub"] }
